--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -45,7 +45,6 @@ header a h1{
 .angebot{
   display: grid;
   grid-template-columns: 70% 30%;
-
 }
 .angebot a{
   grid-column: 1 / 3;
@@ -81,72 +80,91 @@ footer a{
   color: #848484;
   padding: 2.5rem 0 1rem 0;
 }
+
 /* ============================================== */
 @media  screen and (min-width: 576px) {
-  body {
-    margin: 0 10%;
+    body {
+      margin: 0 10%;
+    }
+    header{
+      display: grid;
+      grid-template-columns: 30% 70%;
+      margin: 2rem 0;
+    }
+    header a h1{
+      grid-column: 1 / 2;
+      font-size: 1rem;
+      text-align: left;
+    }
+    header ul{
+      grid-column: 2 / 3;
+      background: none;
+      text-align: right;
+      color: #323A45; 
+    }
+    header li{
+      display: inline;
+      font-size: 0.8rem;
+      padding: 0 0 0 2rem;
+    }
+    header a{
+      color: #323A45; 
+    }
+
+    .container{
+      display: grid;
+      grid-template-columns: repeat(2, 1fr);
+      gap: 1rem;
+    }
+    .container .angebot:nth-of-type(1){
+      grid-column: 1 / 3;
+    }
+    .hersteller{
+      margin-bottom: 1rem;;
+    }
+
+
+    footer {
+      margin-top: 2rem;
+    }
+    .footergrid{
+      display: grid;
+      grid-template-columns: 30% 20% 30% 20%;
+      gap: 2rem;
+    }
+    .ds{
+      grid-column: 1 / 2;
+    }
+    .kontakt{
+      grid-column: 2 / 3;
+    }
+    .nl{
+      grid-column: 3 / 4;
+    }
+    .finden{
+      grid-column: 4 / 5;
+    }
+    footer h2{
+      font-size: 1rem;
+    }
+}
+@media  screen and (min-width: 1200px) {
+  .container{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 1rem;
   }
-header{
-  display: grid;
-  grid-template-columns: 30% 70%;
-  margin: 2rem 0;
+  .container .angebot:nth-of-type(1){
+    grid-column: 1 / 4;
+  }
 }
-header a h1{
-  grid-column: 1 / 2;
-  font-size: 1rem;
-  text-align: left;
-  
-}
-header ul{
-  grid-column: 2 / 3;
-  background: none;
-  text-align: right;
-  color: #323A45; 
-}
-header li{
-  display: inline;
-  font-size: 0.8rem;
-  padding: 0 0 0 2rem;
-}
-header a{
-  color: #323A45; 
-}
-
-.container{
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  gap: 1rem;
-}
-
-.container .angebot:nth-of-type(1){
-  grid-column: 1 / 4;
-}
-.hersteller{
-  margin-bottom: 1rem;;
-}
-
-
-footer {
-  margin-top: 2rem;
-}
-.footergrid{
-  display: grid;
-  grid-template-columns: 30% 20% 30% 20%;
-  gap: 2rem;
-}
-.ds{
-  grid-column: 1 / 2;
-}
-.kontakt{
-  grid-column: 2 / 3;
-}
-.nl{
-  grid-column: 3 / 4;
-}
-.finden{
-  grid-column: 4 / 5;
-}
-footer h2{
-  font-size: 1rem;
-}
+@media  screen and (min-width: 1800px) {
+  .container{
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 1rem;
+  }
+  .container .angebot:nth-of-type(1){
+    grid-column: 1 / 5;
+  }
 }
