--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,12 +12,12 @@ body {
   font-family: 'Karla-VariableFont';
   color: #323A45; 
 }
+
 h1{
   text-transform: uppercase;
   font-size: 2.5rem;
   text-align: center;
 }
-
 ul {
   background-color: #323A45;
   margin-bottom: 2rem;
@@ -26,7 +26,6 @@ ul {
 li {
   list-style: none;
   text-align: right;
-  
   padding-right: 1rem;
 }
 a {
@@ -81,11 +80,10 @@ footer a{
   padding: 2.5rem 0 1rem 0;
 }
 
-/* ============================================== */
+/* ============================================== */ 
+/* ==               Media queries              == */ 
+/* ============================================== */ 
 @media  screen and (min-width: 576px) {
-    body {
-      margin: 0 10%;
-    }
     header{
       display: grid;
       grid-template-columns: 30% 70%;
@@ -109,7 +107,7 @@ footer a{
     }
     header a{
       color: #323A45; 
-    }
+    } 
 
     .container{
       display: grid;
@@ -122,7 +120,20 @@ footer a{
     .hersteller{
       margin-bottom: 1rem;;
     }
+}
+@media  screen and (min-width: 1200px) {
+    body {
+      margin: 0 10%;
+    }
 
+    .container{
+      display: grid;
+      grid-template-columns: repeat(3, 1fr);
+      gap: 1rem;
+    }
+    .container .angebot:nth-of-type(1){
+      grid-column: 1 / 4;
+    }
 
     footer {
       margin-top: 2rem;
@@ -148,23 +159,13 @@ footer a{
       font-size: 1rem;
     }
 }
-@media  screen and (min-width: 1200px) {
-  .container{
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    gap: 1rem;
-  }
-  .container .angebot:nth-of-type(1){
-    grid-column: 1 / 4;
-  }
-}
 @media  screen and (min-width: 1800px) {
-  .container{
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    gap: 1rem;
-  }
-  .container .angebot:nth-of-type(1){
-    grid-column: 1 / 5;
-  }
-}
+    .container{
+      display: grid;
+      grid-template-columns: repeat(6, 1fr);
+      gap: 1rem;
+    }
+    .container .angebot:nth-of-type(1){
+      grid-column: 1 / 7;
+    }
+} 
